--- a/index.html
+++ b/index.html
@@ -8,15 +8,14 @@ title: Cyril MOINEAU
 			<h1 style="float: left;">Cyril MOINEAU</h1>
 		</div>
 		<div id="flex-container">
-			<div>
+			<div class="box" style="margin: 1em;">
 				<h2>Who am I ?</h2>
 					<p>
-						I am a French engineer student in computer science born in 1997. Since my preparatory class, I have been curious about the world of research. 
-						I am interrested in the field of machine learning and data mining. But I am also found of physic and I love to learn new things in general !
-						</br>
-						I want to know what I am working for, and I am passionate about research. Due to my formation as an engineer, I also want to work for a company. This is why I would like to do applied research.
+						I am a French research engineer in computer science born in 1997. Since my preparatory class, I have been curious about the world of research. 
+						I am interested in the field of machine learning and data mining. But I am also found of physic and I love to learn new things in general !
 					</p>
-
+			</div>
+			<div class="box" style="margin: 1em;">
 				<h2>Currently</h2>
 				<p>
 					I am studying at <a href="http://www.enssat.fr/">ENSSAT Lannion</a>, a French engineering school. Parallely, I am also preparing a second diploma in research in computer science at the <a href="https://www.univ-rennes1.fr/">University of Rennes 1</a>. I am currently in an end study internship in the <a href="http://www-shaman.irisa.fr/">Shaman</a> Team under the supervision of <a href="http://people.irisa.fr/Gregory.Smits/"> Gregory Smits</a>.
@@ -25,14 +24,21 @@ title: Cyril MOINEAU
 		</div>
 		<h2>Education</h2>
 		
-		<h3>M2SIF Rennes 1 (2019-2020)</h3>
-			<ul>
+		<h3>M2SIF Rennes 1 (2019-2020)
+			<i id="1_show" class="fa fa-arrow-circle-down" aria-hidden="true" onclick="document.getElementById('msif').style.display='block';document.getElementById('1_hide').style.display='initial';document.getElementById('1_show').style.display='none';"></i> 
+
+			<i id="1_hide" class="fa fa-arrow-circle-up" aria-hidden="true" onclick="document.getElementById('msif').style.display='none';document.getElementById('1_hide').style.display='none';document.getElementById('1_show').style.display='initial';" style="display:none;"></i></h3>
+			<ul id="msif" style="display:none;">
 				<li>Data mining and visualisation</li>
 				<li>Data analysis and probabilistic modeling</li>
 				<li>Writting of scientific publications</li>
 			</ul>
-		<h3>ENSSAT (2017-2020)</h3>
-			<ul>
+		<h3>ENSSAT (2017-2020)
+
+			<i id="2_show" class="fa fa-arrow-circle-down" aria-hidden="true" onclick="document.getElementById('enssat').style.display='block';document.getElementById('2_hide').style.display='initial';document.getElementById('2_show').style.display='none';"></i> 
+
+			<i id="2_hide" class="fa fa-arrow-circle-up" aria-hidden="true" onclick="document.getElementById('enssat').style.display='none';document.getElementById('2_hide').style.display='none';document.getElementById('2_show').style.display='initial';" style="display:none;"></i></h3>
+			<ul id="enssat" style="display:none;">
 				<li><strong>Mathematics :</strong>
 					<ul>
 						<li>Mathematical logic</li>
@@ -76,8 +82,11 @@ title: Cyril MOINEAU
 						<li>Basic digital systems</li>
 					</ul>
 			</ul>
-		<h3>Preparatory classes (2015-2017)</h3>
-			<ul>
+		<h3>Preparatory classes (2015-2017)
+			<i id="3_show" class="fa fa-arrow-circle-down" aria-hidden="true" onclick="document.getElementById('prep').style.display='block';document.getElementById('3_hide').style.display='initial';document.getElementById('3_show').style.display='none';"></i> 
+			<i id="3_hide" class="fa fa-arrow-circle-up" aria-hidden="true" onclick="document.getElementById('prep').style.display='none';document.getElementById('3_hide').style.display='none';document.getElementById('3_show').style.display='initial';" style="display:none;"></i></h3>
+			
+			<ul id="prep" style="display:none;">
 				<li><strong>Mathematics :</strong></li>
 					<ul>
 						<li>Linear algebra</li>
