Update banners for schools.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@ title: Cyril MOINEAU
 
 		<h2>Education</h2>
 		
-		<h3>M2SIF Rennes 1 (2019-2020)
+		<h3><a href="https://international.univ-rennes1.fr/en" style="on;"><img src="/ressources/logo_ur1.png" style="height: 2em; width: 5em; margin-right: 0.5em;"></a>
+			M2SIF Rennes 1 (2019-2020)
 			<i id="1_show" class="fa fa-arrow-circle-down" aria-hidden="true" style="margin-left: 0.5em;"
 			onclick="document.getElementById('msif').style.display='block';document.getElementById('1_hide').style.display='initial';document.getElementById('1_show').style.display='none';"></i> 
 
@@ -36,7 +37,8 @@ title: Cyril MOINEAU
 				<li>Data analysis and probabilistic modeling</li>
 				<li>Writting of scientific publications</li>
 			</ul>
-		<h3>ENSSAT (2017-2020)
+		<h3><a href="http://www.enssat.fr/"><img src="/ressources/logo_enssat.png" style="height: 2em; width: 5em; margin-right: 0.5em;"></a>
+			ENSSAT (2017-2020)
 
 			<i id="2_show" class="fa fa-arrow-circle-down" aria-hidden="true" style="margin-left: 0.5em;"
 			onclick="document.getElementById('enssat').style.display='block';document.getElementById('2_hide').style.display='initial';document.getElementById('2_show').style.display='none';"></i> 
@@ -87,7 +89,8 @@ title: Cyril MOINEAU
 						<li>Basic digital systems</li>
 					</ul>
 			</ul>
-		<h3>Preparatory classes (2015-2017)
+		<h3><a href="http://www.enssat.fr/"><img src="/ressources/pothier.jpg" style="height: 3.5em; width: 3.5em; margin-right: 0.5em;"></a>
+			Preparatory classes (2015-2017)
 			<i id="3_show" class="fa fa-arrow-circle-down" aria-hidden="true" style="margin-left: 0.5em;"
 			onclick="document.getElementById('prep').style.display='block';document.getElementById('3_hide').style.display='initial';document.getElementById('3_show').style.display='none';"></i> 
 			<i id="3_hide" class="fa fa-arrow-circle-up" aria-hidden="true" style="display:none; margin-left: 0.5em;"
