--- a/fr/index.html
+++ b/fr/index.html
@@ -19,14 +19,15 @@ title: Cyril MOINEAU
 			<div class="box" style="margin: 1em;">
 				<h2>Actuellement</h2>
 				<p>
-					J'étudie à <a href="http://www.enssat.fr/">l'ENSSAT Lannion</a>, une école d'ingénieur française. 
+					J'étudie à <a href="http://www.enssat.fr/fr_FR/home">l'ENSSAT Lannion</a>, une école d'ingénieur française. 
 					En parallèle, je prépare aussi un second diplôme orienté vers la recherche en informatique à <a href="https://www.univ-rennes1.fr/">l'Université de Rennes 1</a>. Je suis actuellement en stage de fin d'étude dans l'équipe <a href="http://www-shaman.irisa.fr/">Shaman</a> de l'IRISA, sous la supervision de mon maître de stage <a href="http://people.irisa.fr/Gregory.Smits/"> Gregory Smits</a>.
 				</p>
 			</div>
 		</div>
 
 		<h2>Formation</h2>
-		<h3>Master Recherche en informatique Rennes 1 (2019-2020)
+		<h3><a href="https://www.univ-rennes1.fr/" style="on;"><img src="/ressources/logo_ur1.png" style="height: 2em; width: 5em; margin-right: 0.5em;"></a>
+		Master Recherche en informatique Rennes 1 (2019-2020)
 		<i id="1_show" class="fa fa-arrow-circle-down" aria-hidden="true" onclick="document.getElementById('msif').style.display='block';document.getElementById('1_hide').style.display='initial';document.getElementById('1_show').style.display='none';"></i> 
 		<i id="1_hide" class="fa fa-arrow-circle-up" aria-hidden="true" onclick="document.getElementById('msif').style.display='none';document.getElementById('1_hide').style.display='none';document.getElementById('1_show').style.display='initial';" style="display:none;"></i></h3>
 			<ul id="msif" style="display:none;">
@@ -34,7 +35,8 @@ title: Cyril MOINEAU
 				<li>Analyse de données et modélisation probabilistique</li>
 				<li>Rédaction d'article scientifique</li>
 			</ul>
-		<h3>ENSSAT école d'ingénieur (2017-2020)
+			<h3><a href="http://www.enssat.fr/fr_FR/home"><img src="/ressources/logo_enssat.png" style="height: 2em; width: 5em; margin-right: 0.5em;"></a>
+			ENSSAT école d'ingénieur (2017-2020)
 
 			<i id="2_show" class="fa fa-arrow-circle-down" aria-hidden="true" onclick="document.getElementById('enssat').style.display='block';document.getElementById('2_hide').style.display='initial';document.getElementById('2_show').style.display='none';"></i> 
 
@@ -83,7 +85,8 @@ title: Cyril MOINEAU
 						<li>Bases des systèmes  numériques</li>
 					</ul>
 			</ul>
-		<h3>Classe préparatoire (2015-2017)
+		<h3><a href="http://www.enssat.fr/"><img src="/ressources/pothier.jpg" style="height: 3.5em; width: 3.5em; margin-right: 0.5em;"></a>
+		Classe préparatoire (2015-2017)
 		<i id="3_show" class="fa fa-arrow-circle-down" aria-hidden="true" onclick="document.getElementById('prep').style.display='block';document.getElementById('3_hide').style.display='initial';document.getElementById('3_show').style.display='none';"></i> 
 		<i id="3_hide" class="fa fa-arrow-circle-up" aria-hidden="true" onclick="document.getElementById('prep').style.display='none';document.getElementById('3_hide').style.display='none';document.getElementById('3_show').style.display='initial';" style="display:none;"></i></h3>
 			<ul id="prep" style="display:none;">
