Big css update. Adding CEA.

--- a/fr/index.html
+++ b/fr/index.html
@@ -11,16 +11,15 @@ title: Cyril MOINEAU
 			<div class="box" style="margin: 1em;">
 				<h2>Qui suis je ?</h2>
 				<p>
-					Je suis un élève ingénieur en informatique français né en 1997. J'ai développé un intérêt pour le monde de la recherche depuis que je suis en classe préparatoire. Je veux que mon travail soit utile et je suis passioné par la recherche de solutions.
+					Je suis français né en 1997 et ingénieur chercheur en informatique. J'ai développé un intérêt pour le monde de la recherche grâce à mes deux ans d'études en classe préparatoire. 
 					</br>
-					Je suis passionné par l'apprentissage automatique et l'exploration de données, mais je suis aussi interressé par la physique et curieux de manière générale.			
+					Je suis passionné par l'apprentissage automatique et l'exploration de données. J'ai de nombreux centres d'intérêts et suis toujours enthousiaste à l'idée de pouvoir accumuler de nouvelles connaissances. 
 				</p>
 			</div>
 			<div class="box" style="margin: 1em;">
 				<h2>Actuellement</h2>
 				<p>
-					J'étudie à <a href="http://www.enssat.fr/fr_FR/home">l'ENSSAT Lannion</a>, une école d'ingénieur française. 
-					En parallèle, je prépare aussi un second diplôme orienté vers la recherche en informatique à <a href="https://www.univ-rennes1.fr/">l'Université de Rennes 1</a>. Je suis actuellement en stage de fin d'étude dans l'équipe <a href="http://www-shaman.irisa.fr/">Shaman</a> de l'IRISA, sous la supervision de mon maître de stage <a href="http://people.irisa.fr/Gregory.Smits/"> Gregory Smits</a>.
+					Je travaille au sein du <a href="http://www-list.cea.fr/">CEA</a>, un organisme public à la pointe de la recherche et du developpement. J'y suis employé en tant qu'ingénieur chercheur.
 				</p>
 			</div>
 		</div>
@@ -42,7 +41,7 @@ title: Cyril MOINEAU
 
 			<i id="2_hide" class="fa fa-arrow-circle-up" aria-hidden="true" onclick="document.getElementById('enssat').style.display='none';document.getElementById('2_hide').style.display='none';document.getElementById('2_show').style.display='initial';" style="display:none;"></i></h3>
 			<ul id="enssat" style="display:none;">
-				<li><strong>Mathématiques :</strong>
+				<li><strong style="font-size: 1.5em;">Mathématiques :</strong></li>
 					<ul>
 						<li>Logique Mathématiques</li>
 						<li>Analyse</li>
@@ -53,7 +52,7 @@ title: Cyril MOINEAU
 						<li>Théorie des files d'attente</li>
 						<li>Cryptographie</li>
 					</ul>
-				<li><strong>Informatique :</strong>
+				<li><strong style="font-size: 1.5em;">Informatique :</strong></li>
 					<ul>
 						<li>Réseaux</li>
 						<li>Système d'exploitation</li>
@@ -79,7 +78,7 @@ title: Cyril MOINEAU
 						<li>Analyse et fouille de données massives (web sémantique)</li>
 						<li>Traitement automatique du langage et de la parole</li>
 					</ul>
-				<li><strong>Electronique :</strong>
+				<li><strong style="font-size: 1.5em;">Electronique :</strong></li>
 					<ul>
 						<li>Micro-contrôleurs</li>
 						<li>Bases des systèmes  numériques</li>
@@ -90,7 +89,7 @@ title: Cyril MOINEAU
 		<i id="3_show" class="fa fa-arrow-circle-down" aria-hidden="true" onclick="document.getElementById('prep').style.display='block';document.getElementById('3_hide').style.display='initial';document.getElementById('3_show').style.display='none';"></i> 
 		<i id="3_hide" class="fa fa-arrow-circle-up" aria-hidden="true" onclick="document.getElementById('prep').style.display='none';document.getElementById('3_hide').style.display='none';document.getElementById('3_show').style.display='initial';" style="display:none;"></i></h3>
 			<ul id="prep" style="display:none;">
-				<li><strong>Mathematiques :</strong></li>
+				<li><strong style="font-size: 1.5em;">Mathematiques :</strong></li>
 					<ul>
 						<li>Algèbre linéaire</li>
 						<li>Espace vectoriel normé en dimensions finies</li>
@@ -99,7 +98,7 @@ title: Cyril MOINEAU
 						<li>Probabilités</li>
 						<li>Calcul différentiel</li>
 					</ul>
-				<li><strong>Physique :</strong></li>
+				<li><strong style="font-size: 1.5em;">Physique :</strong></li>
 					<ul>
 						<li>Optique non linéaire</li>
 						<li>Électromagnétisme</li>
@@ -107,14 +106,14 @@ title: Cyril MOINEAU
 						<li>Thermodynamique</li>
 						<li>Physique des ondes</li>
 					</ul>
-				<li><strong>Chimie :</strong></li>
+				<li><strong style="font-size: 1.5em;">Chimie :</strong></li>
 					<ul>
 						<li>Mélanges et transformations: aspects thermodynamiques</li>
 						<li>Énergie chimique et énergie électrique: conversion et stockage</li>
 						<li>Atomes, molécules, complexes: modélisation quantique et réactivité</li>
 						<li>Molécules et matériaux organiques : stratégies de synthèse et applications</li>
 					</ul>
-				<li><strong>Informatique :</strong></li>
+				<li><strong style="font-size: 1.5em;">Informatique :</strong></li>
 					<ul>
 						<li>Introduction à Python</li>
 						<li>Introduction aux bases de données (mySQL)</li>
