--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@ title: Cyril MOINEAU
 				<h2>Who am I ?</h2>
 					<p>
 						I am a French research engineer in computer science born in 1997. Since my preparatory class, I have been curious about the world of research. 
-						I am interested in the field of machine learning and data mining. But I am also found of physic and I love to learn new things in general !
+						I am interested in the field of machine learning and data mining. But I have many other center of interrest and I am keen on learning new things !
 					</p>
 			</div>
 			<div class="box" style="margin: 1em;">
 				<h2>Currently</h2>
 				<p>
-					I am studying at <a href="http://www.enssat.fr/">ENSSAT Lannion</a>, a French engineering school. Parallely, I am also preparing a second diploma in research in computer science at the <a href="https://www.univ-rennes1.fr/">University of Rennes 1</a>. I am currently in an end study internship in the <a href="http://www-shaman.irisa.fr/">Shaman</a> Team under the supervision of <a href="http://people.irisa.fr/Gregory.Smits/"> Gregory Smits</a>.
+					I am working at the <a href="http://www-list.cea.fr/en/">CEA</a>, a company at the cutting edge of technological research and development, as a research ingeenier in the domain of machine learning.
 				</p>
 			</div>
 		</div>
@@ -26,7 +26,7 @@ title: Cyril MOINEAU
 		<h2>Education</h2>
 		
 		<h3><a href="https://international.univ-rennes1.fr/en" style="on;"><img src="/ressources/logo_ur1.png" style="height: 2em; width: 5em; margin-right: 0.5em;"></a>
-			M2SIF Rennes 1 (2019-2020)
+			Master research Rennes 1 (2019-2020)
 			<i id="1_show" class="fa fa-arrow-circle-down" aria-hidden="true" style="margin-left: 0.5em;"
 			onclick="document.getElementById('msif').style.display='block';document.getElementById('1_hide').style.display='initial';document.getElementById('1_show').style.display='none';"></i> 
 
@@ -46,7 +46,7 @@ title: Cyril MOINEAU
 			<i id="2_hide" class="fa fa-arrow-circle-up" aria-hidden="true" style="display:none; margin-left: 0.5em;"
 			onclick="document.getElementById('enssat').style.display='none';document.getElementById('2_hide').style.display='none';document.getElementById('2_show').style.display='initial';"></i></h3>
 			<ul id="enssat" style="display:none;">
-				<li><strong>Mathematics :</strong>
+				<li><strong style="font-size: 1.5em;">Mathematics :</strong></li>
 					<ul>
 						<li>Mathematical logic</li>
 						<li>Analysis</li>
@@ -57,7 +57,7 @@ title: Cyril MOINEAU
 						<li>Theory of queues</li>
 						<li>Cryptography</li>
 					</ul>
-				<li><strong>Computer science :</strong>
+				<li><strong style="font-size: 1.5em;">Computer science :</strong></li>
 					<ul>
 						<li>Networking</li>
 						<li>Operating System</li>
@@ -83,7 +83,7 @@ title: Cyril MOINEAU
 						<li>Big data mining and analysis (semantic web)</li>
 						<li>Automatic processing of languages and speech</li>
 					</ul>
-				<li><strong>Electronics :</strong>
+				<li><strong style="font-size: 1.5em;">Electronics :</strong></li>
 					<ul>
 						<li>Microcontrollers</li>
 						<li>Basic digital systems</li>
@@ -97,7 +97,7 @@ title: Cyril MOINEAU
 			onclick="document.getElementById('prep').style.display='none';document.getElementById('3_hide').style.display='none';document.getElementById('3_show').style.display='initial';"></i></h3>
 			
 			<ul id="prep" style="display:none;">
-				<li><strong>Mathematics :</strong></li>
+				<li><strong style="font-size: 1.5em;">Mathematics :</strong></li>
 					<ul>
 						<li>Linear algebra</li>
 						<li>Normed vectorial space in finite dimension</li>
@@ -106,7 +106,7 @@ title: Cyril MOINEAU
 						<li>Probability</li>
 						<li>Diffential calculus</li>
 					</ul>
-				<li><strong>Physics :</strong></li>
+				<li><strong style="font-size: 1.5em;">Physics :</strong></li>
 					<ul>
 						<li>Non-linear optics</li>
 						<li>Electromagnetism</li>
@@ -114,14 +114,14 @@ title: Cyril MOINEAU
 						<li>Thermodynamic</li>
 						<li>Wave physics</li>
 					</ul>
-				<li><strong>Chemistry :</strong></li>
+				<li><strong style="font-size: 1.5em;">Chemistry :</strong></li>
 					<ul>
 						<li>Mixtures and transformations: thermodynamic aspects</li>
 						<li>Chemical energy and electrical energy: conversion and storage</li>
 						<li>Atoms, molecules, complexes: quantum modeling and reactivity</li>
 						<li>Molecules and organic materials: synthesis strategy and applications</li>
 					</ul>
-				<li><strong>Computer science :</strong></li>
+				<li><strong style="font-size: 1.5em;">Computer science :</strong></li>
 					<ul>
 						<li>Introduction to Python</li>
 						<li>Introduction to data base (mySQL)</li>
