--- a/work_experiences/fr/index.html
+++ b/work_experiences/fr/index.html
@@ -6,14 +6,37 @@ title: Cyril MOINEAU
 		<h1>Mon expérience professionnelle</h1>
 		<h2 style="text-align: left">Sommaire :</h2>
 		<ul class="summary">
+			<li><a href="#cea">CEA list</a></li>
 			<li><a href="#irisa">Stage dans l'équipe SHAMAN de l'IRISA 2020</a></li>
 			<li><a href="#NCTU">Stage à la NCTU 2019</a></li>
 			<li><a href="#Metropole">Orléans Métropole 2018</a></li>
 			
 		</ul>
+
+		<div class="box">
+			<h2 id="cea">CEA LIST</h2>
+			<img class="center "src="/ressources/cea.jpg" style="width: 8em; height: 8em; box-shadow: 2px 0px 6px black;">
+	
+			<h3>General informations</h3>
+			<ul>
+				<li><b>Date :</b> November 2020 - Now</li>
+				<li><b>Entreprise :</b> <a href="http://www-list.cea.fr/"></a>CEA</a></li>
+				<li><b>Lieux :</b> Paris, France</li>
+				<li><b>Aptitudes développées :</b> Python, C++, Réseaux de Neuronnes profonds </li>
+			</ul>
+		
+			<h3>Description de l'entreprise :</h3>
+			<p>
+				Le CEA est un acteur majeur du numérique français et européen. 
+				Il a pour objectif de faire de la recherche et de transmettre le savoir vers le milieu industriel.
+				Le LIST (laboratoire d'intégration des systèmes et des technologies) est l'un des trois insituts du CEA Tech, il est spécialisé dans la recherche sur les systèmes numériques intelligents.
+			</p>
+		</div>
+
+	
 	<div class="box">
 		<h2 id="irisa">Stage dans l'équipe SHAMAN de l'IRISA 2020</h2>
-		<img class="center "src="../../ressources/irisa.jpg" style="width: 14em; height: 4em; box-shadow: 2px 0px 6px black;">
+		<img class="center "src="/ressources/irisa.jpg" style="width: 14em; height: 4em; box-shadow: 2px 0px 6px black;">
 			<h3>Informations générales</h3>
 			<ul>
 				<li><b>Date :</b> Novembre 2019 - Juillet 2020</li>
@@ -55,7 +78,7 @@ title: Cyril MOINEAU
 	</div>
 	<div class="box">
 		<h2 id="NCTU">Stage à la NCTU 2019</h2>
-		<img class="center "src="../../ressources/NCTU.jpg" style="width: 8em; height: 8em; border-radius: 50%; box-shadow: 2px 0px 6px black;">
+		<img class="center "src="/ressources/NCTU.jpg" style="width: 8em; height: 8em; border-radius: 50%; box-shadow: 2px 0px 6px black;">
 
 			<h3>Informations générales</h3>
 			<ul>
@@ -85,7 +108,7 @@ title: Cyril MOINEAU
 	</div>		
 	<div class="box">
 		<h2 id="Metropole">Orléans Métropole 2018</h2>
-		<img class="center "src="../../ressources/orleans_metropole.jpg" style="width: 8em; height: 8em; box-shadow: 2px 0px 6px black;">
+		<img class="center "src="/ressources/orleans_metropole.jpg" style="width: 8em; height: 8em; box-shadow: 2px 0px 6px black;">
 
 			<h3>Informations générales</h3>
 			<ul>
