Typo fixes + higlight get it's own color !

--- a/fr/index.html
+++ b/fr/index.html
@@ -25,14 +25,14 @@ title: Cyril MOINEAU
 		</div>
 
 		<h2>Formation</h2>
-		<h3><a href="https://www.univ-rennes1.fr/" style="on;"><img src="/ressources/logo_ur1.png" style="height: 2em; width: 5em; margin-right: 0.5em;"></a>
+		<h3><a href="https://www.univ-rennes1.fr/"><img src="/ressources/logo_ur1.png" style="height: 2em; width: 5em; margin-right: 0.5em;"></a>
 		Master Recherche en informatique Rennes 1 (2019-2020)
 		<i id="1_show" class="fa fa-arrow-circle-down" aria-hidden="true" onclick="document.getElementById('msif').style.display='block';document.getElementById('1_hide').style.display='initial';document.getElementById('1_show').style.display='none';"></i> 
 		<i id="1_hide" class="fa fa-arrow-circle-up" aria-hidden="true" onclick="document.getElementById('msif').style.display='none';document.getElementById('1_hide').style.display='none';document.getElementById('1_show').style.display='initial';" style="display:none;"></i></h3>
 			<ul id="msif" style="display:none;">
 				<li>Fouille de données massives et visualisation</li>
 				<li>Analyse de données et modélisation probabilistique</li>
-				<li>Rédaction d'article scientifique</li>
+				<li>Rédaction d'articles scientifiques</li>
 			</ul>
 			<h3><a href="http://www.enssat.fr/fr_FR/home"><img src="/ressources/logo_enssat.png" style="height: 2em; width: 5em; margin-right: 0.5em;"></a>
 			ENSSAT école d'ingénieur (2017-2020)
@@ -78,18 +78,18 @@ title: Cyril MOINEAU
 						<li>Analyse et fouille de données massives (web sémantique)</li>
 						<li>Traitement automatique du langage et de la parole</li>
 					</ul>
-				<li><strong style="font-size: 1.5em;">Electronique :</strong></li>
+				<li><strong style="font-size: 1.5em;">Électronique :</strong></li>
 					<ul>
 						<li>Micro-contrôleurs</li>
 						<li>Bases des systèmes  numériques</li>
 					</ul>
 			</ul>
-		<h3><a href="http://www.enssat.fr/"><img src="/ressources/pothier.jpg" style="height: 3.5em; width: 3.5em; margin-right: 0.5em;"></a>
+		<h3><a href="http://www.lycee-pothier.com/"><img src="/ressources/pothier.jpg" style="height: 3.5em; width: 3.5em; margin-right: 0.5em;"></a>
 		Classe préparatoire (2015-2017)
 		<i id="3_show" class="fa fa-arrow-circle-down" aria-hidden="true" onclick="document.getElementById('prep').style.display='block';document.getElementById('3_hide').style.display='initial';document.getElementById('3_show').style.display='none';"></i> 
 		<i id="3_hide" class="fa fa-arrow-circle-up" aria-hidden="true" onclick="document.getElementById('prep').style.display='none';document.getElementById('3_hide').style.display='none';document.getElementById('3_show').style.display='initial';" style="display:none;"></i></h3>
 			<ul id="prep" style="display:none;">
-				<li><strong style="font-size: 1.5em;">Mathematiques :</strong></li>
+				<li><strong style="font-size: 1.5em;">Mathématiques :</strong></li>
 					<ul>
 						<li>Algèbre linéaire</li>
 						<li>Espace vectoriel normé en dimensions finies</li>
