--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ title: Cyril MOINEAU
 						<li>Basic digital systems</li>
 					</ul>
 			</ul>
-		<h3><a href="http://www.enssat.fr/"><img src="/ressources/pothier.jpg" style="height: 3.5em; width: 3.5em; margin-right: 0.5em;"></a>
+		<h3><a href="http://www.lycee-pothier.com/"><img src="/ressources/pothier.jpg" style="height: 3.5em; width: 3.5em; margin-right: 0.5em;"></a>
 			Preparatory classes (2015-2017)
 			<i id="3_show" class="fa fa-arrow-circle-down" aria-hidden="true" style="margin-left: 0.5em;"
 			onclick="document.getElementById('prep').style.display='block';document.getElementById('3_hide').style.display='initial';document.getElementById('3_show').style.display='none';"></i> 
