--- a/work_experiences/fr/index.html
+++ b/work_experiences/fr/index.html
@@ -27,9 +27,9 @@ title: Cyril MOINEAU
 		
 			<h3>Description de l'entreprise :</h3>
 			<p>
-				Le CEA est un acteur majeur du numérique français et européen. 
+				Le Commissariat de l'énergie atomique (CEA) est un acteur majeur du numérique français et européen. 
 				Il a pour objectif de faire de la recherche et de transmettre le savoir vers le milieu industriel.
-				Le LIST (laboratoire d'intégration des systèmes et des technologies) est l'un des trois insituts du CEA Tech, il est spécialisé dans la recherche sur les systèmes numériques intelligents.
+				Le Laboratoire d'Intégration des Systèmes et des Technologies (LIST) () est l'un des trois insituts du CEA Tech, il est spécialisé dans la recherche sur les systèmes numériques intelligents.
 			</p>
 		</div>
 
@@ -48,14 +48,14 @@ title: Cyril MOINEAU
 			<h3>Description du poste :</h3>
 			<p>
 
-				Dans le cadre de mon stage de fin d'étude, j'ai travaillé dans les laboratoires de <a href="http://www.irisa.fr/">l'IRISA</a>, au sein de l'équipe <a href="http://www-shaman.irisa.fr/">SHAMAN</a>.
+				Dans le cadre de mon stage de fin d'étude, j'ai travaillé dans les laboratoires de <a href="http://www.irisa.fr/">l'Institut de Recherche en Informatique et Systèmes Aléatoires</a> (IRISA), au sein de l'équipe <a href="http://www-shaman.irisa.fr/">SHAMAN</a>.
 				L'objectif de ce stage était d'améliorer une méthode de génération de résumés linguistiques d'une base de données massive. 
 				Un résumé linguistique correspond à un ensemble de propriétés floues, par exemple : "La plupart des corbeaux sont noirs". 
 				Pour générer ce genre de résumé, les approches classiques ont une complexité linéaire en fonction de la taille de la 
 				base de données et exponentielle en fonction de la taille du vocabulaire. L'équipe <a href="http://www-shaman.irisa.fr/">SHAMAN</a> a proposé de s'appuyer sur 
 				des méta-données stockées par les Systèmes de Gestion de Base de Données pour éviter le parcours séquentiel de la base de 
 				données. Leur méthode est parfaite dans le cas où les propriétés à étudier sont atomiques, mais perfectible dans le cas d'une 
-				conjonctions de propriété (par exemple: "La plupart des corbeaux sont noirs <b>et</b> grands").
+				conjonction de propriétés (par exemple: "La plupart des corbeaux sont noirs <b>et</b> grands").
 			</p>
 			<p>
 
@@ -65,7 +65,7 @@ title: Cyril MOINEAU
 				<a href="https://www.researchgate.net/publication/2459804_Approximating_Multi-Dimensional_Aggregate_Range_Queries_Over_Real_Attributes">GENHIST</a> et 
 				<a href="https://www.microsoft.com/en-us/research/publication/stholes-a-multidimensional-workload-aware-histogram/">STHOLES</a>) 
 				en Python (3.6.9). 
-				Enfin, j'ai utilisé <a href="https://www.docker.com/">Docker</a> et <a href="https://flask.palletsprojects.com/en/1.1.x/">Flask</a> afin de créer une API dockerisé pour qu'il soit plus facile de reprendre le travail que j'ai réalisé en stage.
+				Enfin, j'ai utilisé <a href="https://www.docker.com/">Docker</a> et <a href="https://flask.palletsprojects.com/en/1.1.x/">Flask</a> afin de créer une API dockerisée pour qu'il soit plus facile de reprendre le travail que j'ai réalisé en stage.
 			</p>
 
 			<h3>Conclusion :</h3>
@@ -94,13 +94,13 @@ title: Cyril MOINEAU
     		</p>
 
     		<p>
-    			Tout au long de ces 2 mois, j'ai travaillé sur la détection d'émotions en utilisant les signaux ECG (électrocardiogramme) et PPG (photoplethysmogramme). Pour cela, j'ai utilisé un CNN (Réseaux de neurones par convolution) avec la librairie <a href="https://keras.io/">Keras</a> (v2.24). J'ai aussi pu travailler sur des problèmatiques telles que la détection de pics et l'implémentation d'un système temps réel. En effet, l'objectif final du stage était d'implémenter le CNN sur la carte <a href="https://developer.nvidia.com/embedded/jetson-nano-developer-kit">JetSon Nano</a> de NVIDIA. 
+    			Tout au long de ces 2 mois, j'ai travaillé sur la détection d'émotions en utilisant les signaux ECG (électrocardiogramme) et PPG (photoplethysmogramme). Pour cela, j'ai utilisé un CNN (Réseau de neurones par convolution) avec la librairie <a href="https://keras.io/">Keras</a> (v2.24). J'ai aussi pu travailler sur des problèmatiques telles que la détection de pics et l'implémentation d'un système temps réel. En effet, l'objectif final du stage était d'implémenter le CNN sur la carte <a href="https://developer.nvidia.com/embedded/jetson-nano-developer-kit">JetSon Nano</a> de NVIDIA. 
     		</p>
 
     		<h3>Conclusion :</h3>
     		<p>
-				Ce stage a été riche en expérience et fut une expérience du monde de la recherche très positive. 
-				Je ne pourrais pas suffisament remercier les personnes qui m'ont accueilli à la NCTU et qui m'ont permi de passer deux mois très bénéfiques. 
+				Ce stage a été riche en expériences et fut une découverte du monde de la recherche très positive. 
+				Je ne pourrais pas suffisament remercier les personnes qui m'ont accueilli à la NCTU et qui m'ont permis de passer deux mois très bénéfiques. 
 				J'ai pu comprendre les difficultés de travailler dans un laboratoire de recherche. 
 				Même si la thématique du stage ne tombait pas dans celle que j'ai pu aborder lors de mes études, j'étais avide d'apprendre et d'appréhender ce sujet. 
 				Ces deux mois ont confirmé mon désir de faire de la recherche.
@@ -122,14 +122,14 @@ title: Cyril MOINEAU
     		<p>J'ai passé 2 mois lors de l'été 2018 à la <a href="http://www.orleans-metropole.fr/">Métropole d'Orléans</a> dans la direction des systèmes d'information (DSI). Pendant cet été, j'ai pu travailler sur les deux sujets suivants.
     		</p>
     		<p>
-    			1. La mise en place d'un service de supervision en utilisant l'OS <a href="https://www.centreon.com/en/solutions/centreon/">Centreon</a>. Je suis arrivé au moment de la fusion des services de DSI de chaque commune. Dans ce contexte, la DSI d'Orléans a décidé de mettre à jour son système de supervision. Pendant mon stage, j'ai pu observer un vrai réseaux et développer mes connaissances sur les réseaux et la virtualisation.
+    			1. La mise en place d'un service de supervision en utilisant l'OS <a href="https://www.centreon.com/en/solutions/centreon/">Centreon</a>. Je suis arrivé au moment de la fusion des services de DSI de chaque commune. Dans ce contexte, la DSI d'Orléans a décidé de mettre à jour son système de supervision. Pendant mon stage, j'ai pu observer un vrai réseau et développer mes connaissances sur les réseaux et la virtualisation.
     		</p>
 			<p>
     			2. Gestion de l'Active Directory (AD). L'AD était composé d'utilisateurs qui n'avaient pas été supprimés. Ce projet était très intéressant puisque je devais trouver un faisceau d'indices me permettant de discriminer les utilisateurs actifs des inactifs. Pour cela j'ai développé des scripts Power Shell.
     		</p>
     		<h3>Conclusion :</h3>
     		<p>
-				Ce fut mon premier stage technique, il m'a permis de découvrir beaucoups dans le domaine de la gestion de réseau et de découvrir le monde du travail. 
+				Ce fut mon premier stage technique, il m'a permis de découvrir beaucoup dans le domaine de la gestion de réseaux et de découvrir le monde du travail. 
 				On m'a par ailleurs donné de nombreuses responsabilités, notamment lors du nettoyage de l'Active Directory. 
 				Où la suppression d'un utilisateur actif aurait été pénalisante pour l'entreprise.  
 			</p>		
