--- a/work_experiences/index.html
+++ b/work_experiences/index.html
@@ -7,6 +7,7 @@ title: Cyril MOINEAU
 
 		<h2 style="text-align: left">Summary :</h2>
 		<ul>
+			<li><a href="#cea">CEA list</a></li>
 			<li><a href="#irisa">Internship in the team SHAMAN of the IRISA 2020</a></li>
 			<li><a href="#NCTU">Internship at the NCTU 2019</a></li>
 			<li><a href="#Metropole">Orléans Métropole 2018</a></li>
@@ -40,7 +41,7 @@ title: Cyril MOINEAU
 			<h3>General informations</h3>
 			<ul>
 				<li><b>Date :</b> November 2019 - July 2020</li>
-				<li><b>Duration :</b> 2 months</li>
+				<li><b>Duration :</b> 6 months</li>
 				<li><b>Company :</b> <a href="http://www.irisa.fr/"></a>IRISA</a></li>
 				<li><b>Location :</b> Lannion, France</li>
 				<li><b>Skills developed :</b> Python, Research, Redaction, Fuzzy Logic, Symbolic AI</li>
@@ -93,8 +94,6 @@ title: Cyril MOINEAU
 			</p>
 
 			<p>
-				During these 2 months, I have worked on detecting emotion using ECG (Electrocardiogram) and PPG (Photoplethysmogram) signals. For this I used CNN (convolutional neuronnal network) with the library <a href="https://keras.io/">Keras</a> (v2.24). This also made me work on issues such as peak detection and real time implementation. Indeed, at the end of the internship I had to implement my CNN on the <a href="https://developer.nvidia.com/embedded/jetson-nano-developer-kit">JetSon Nano board</a>. 
-					During these 2 months, I have worked on detecting emotion using ECG (Electrocardiogram) and PPG (Photoplethysmogram) signals. For this I used CNN (convolutional neuronnal network) with the library <a href="https://keras.io/">Keras</a> (v2.24). This also made me work on issues such as peak detection and real time implementation. Indeed, at the end of the internship I had to implement my CNN on the <a href="https://developer.nvidia.com/embedded/jetson-nano-developer-kit">JetSon Nano board</a>. 
 				During these 2 months, I have worked on detecting emotion using ECG (Electrocardiogram) and PPG (Photoplethysmogram) signals. For this I used CNN (convolutional neuronnal network) with the library <a href="https://keras.io/">Keras</a> (v2.24). This also made me work on issues such as peak detection and real time implementation. Indeed, at the end of the internship I had to implement my CNN on the <a href="https://developer.nvidia.com/embedded/jetson-nano-developer-kit">JetSon Nano board</a>. 
 			</p>
 			
