--- a/project/fr/index.html
+++ b/project/fr/index.html
@@ -31,13 +31,13 @@ title: Cyril MOINEAU
 					Pour essayer de changer cela, le <a href="http://lycee-ledantec.fr/">Lycée Le Dantec</a>, <a href="http://www.enssat.fr/">l'ENSSAT</a>, <a href="https://www.orange.fr/portail">Orange</a> et <a href="http://www.ellesbougent.com/">Elles Bougent</a> ont décidé de créer cet évènement pour rentrer en contact avec les jeunes lycéennes et leur donner un premier aperçu du monde du numérique positif. 
 				</p>
 				<p>
-					Les lycéennes sont encadrées par des étudiantes qui sont en études supérieures. Cette aide est primordiale puisque les lycéennes n'ont aucune notion en programmation web. De plus, les tutrices donnent un exemple de femmes qui travaillent dans le monde du numérique pour briser les stéréotypes.
+					Les lycéennes sont encadrées par des étudiantes qui sont en études supérieures. Cette aide est primordiale puisque les lycéennes n'ont aucune notion en programmation web. De plus, les tutrices donnent un exemple de femmes travaillant dans le monde du numérique pour briser les stéréotypes.
 				</p>
 
 			<h3>Description du projet Hackathon de l'ENSSAT :</h3>
 
 			<p>
-				Le projet Hackathon de l'ENSSAT est une compétition de programmation ouverte aux étudiants. Pendant l'évènement, les participants devaient proposer une solution informatique à un problème autour d'une thématique imposée. Tout cela en un temps limité à 24 heures. Ils sont pour cela en équipe de 5 et doivent faire une présentation de leur solution à la fin des 24 heures . Les étudiants sont évalués par un jury de professionels venant de milieux idustriels et de laboratoires. Le but  de cette compétition est d'aider les étudiants à améliorer leurs compétences en les mettant dans des conditions difficiles (limitées à 24 heures !).
+				Le projet Hackathon de l'ENSSAT est une compétition de programmation ouverte aux étudiants. Pendant l'évènement, les participants devaient proposer une solution informatique à un problème autour d'une thématique imposée. Tout cela en un temps limité à 24 heures. Ils sont pour cela en équipe de 5 et doivent faire une présentation de leur solution à la fin des 24 heures. Les étudiants sont évalués par un jury de professionels venant de milieux idustriels et de laboratoires. Le but de cette compétition est d'aider les étudiants à améliorer leurs compétences en les mettant dans des conditions difficiles (limitées à 24 heures !).
 			</p>
 
 
@@ -47,7 +47,7 @@ title: Cyril MOINEAU
 	    			En tant qu'étudiant à <a href="http://www.enssat.fr/">l'ENSSAT Lannion</a>, ces projets m'ont donné l'occasion de participer à la vie étudiante. J'ai été coordinateur des deux projets. Comme expliqué au dessus, le projet Ada Lovelace était constitué de beaucoup d'acteurs, mon travail a été de les coordonner de manière à créer un challenge intéressant et convivial pour les étudiants.
 	    		</p>
 	    		<p>
-	    			J'ai également dû organiser et aider l'équipe d'étudiants dont je faisais partie. J'ai entre autre participé à la création du budget, à la recherche de sponsors et à l'organisation de la logistique des évènements.
+	    			J'ai également dû organiser et aider l'équipe d'étudiants dont je faisais partie. J'ai, entre autre, participé à la création du budget, à la recherche de sponsors et à l'organisation de la logistique des évènements.
 	    			J'ai ainsi pû travailler sur la communication et les résolutions de conflits.
 	    		</p>
 
