Update css + update work experiences.

--- a/work_experiences/fr/index.html
+++ b/work_experiences/fr/index.html
@@ -20,7 +20,7 @@ title: Cyril MOINEAU
 			<h3>General informations</h3>
 			<ul>
 				<li><b>Date :</b> November 2020 - Now</li>
-				<li><b>Entreprise :</b> <a href="http://www-list.cea.fr/"></a>CEA</a></li>
+				<li><b>Entreprise :</b> <a href="http://www-list.cea.fr/">CEA</a></li>
 				<li><b>Lieux :</b> Paris, France</li>
 				<li><b>Aptitudes développées :</b> Python, C++, Réseaux de Neuronnes profonds </li>
 			</ul>
