--- a/work_experiences/index.html
+++ b/work_experiences/index.html
@@ -20,7 +20,7 @@ title: Cyril MOINEAU
 			<h3>General informations</h3>
 			<ul>
 				<li><b>Date :</b> November 2020 - Now</li>
-				<li><b>Company :</b> <a href="http://www-list.cea.fr/en/"></a>CEA</a></li>
+				<li><b>Company :</b> <a href="http://www-list.cea.fr/en/">CEA</a></li>
 				<li><b>Location :</b> Paris, France</li>
 				<li><b>Skills developed :</b> Python, C++, Deep Neural Network </li>
 				
@@ -28,15 +28,15 @@ title: Cyril MOINEAU
 		
 			<h3>Description of the company :</h3>
 			<p>
-				CEA is one of the principal actor in the French and European word of the numeric.
-				Its main objective is to do research and transfer its knowledge to the industry.
-				List is an insitut of the CEA Tech that specializes in smart digital system research.
+				Atomic Energy Commission (CEA) is one of the principal numeric actor in the France and Europe.
+				It aims to do research and transfer its knowledge to the industry.
+				Systems and Technologies Integration Laboratory (List) is an insitut of the CEA Tech that specializes in smart digital system research.
 			</p>
 		</div>
 		
 		<div class="box">
 			<h2 id="irisa">Internship in the team SHAMAN of the IRISA 2020</h2>
-			<img class="center "src="/ressources/irisa.jpg" style="width: 14em; height: 4em; box-shadow: 2px 0px 6px black;">
+			<img class="center" src="/ressources/irisa.jpg" style="width: 14em; height: 4em; box-shadow: 2px 0px 6px black;">
 
 			<h3>General informations</h3>
 			<ul>
